CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET ( GENEVACONFFILES
	README
	genevaConfig.gcfg
	sampleHostFile.hcfg
)

SET ( GENEVASCRIPTS
	prepareBuild.sh
	rsyncList.sh
	sshList.sh
    startClients.sh
	startLocalJobs.sh
)

INSTALL ( FILES ${GENEVACONFFILES} DESTINATION ${INSTALL_PREFIX_DATA}/scripts )

INSTALL ( PROGRAMS ${GENEVASCRIPTS} DESTINATION ${INSTALL_PREFIX_DATA}/scripts )
