CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET ( COMMONSOURCES
	GObject
	GPODExpectationChecksT
	GSerializationHelperFunctions
	GThreadGroup
)

ADD_SUBDIRECTORY ( dataexchange )
ADD_SUBDIRECTORY ( random )
ADD_SUBDIRECTORY ( communication )
ADD_SUBDIRECTORY ( optimization )

# BUILD_SHARED_LIBS controls the behavior of ADD_LIBRARY if STATIC/SHARED omitted
IF( GENEVA_STATIC )
	ADD_LIBRARY ( ${COMMONLIBNAME} STATIC ${COMMONSOURCES} )
ELSE()
	ADD_LIBRARY ( ${COMMONLIBNAME} SHARED ${COMMONSOURCES} )
ENDIF( GENEVA_STATIC )

SET_TARGET_PROPERTIES( ${PROJECT_NAME}
	PROPERTIES VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
)

INSTALL ( TARGETS ${COMMONLIBNAME} DESTINATION lib
	PERMISSIONS
	OWNER_READ OWNER_WRITE
	GROUP_READ
	WORLD_READ
)
