CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# Check whether we can find the OpenBabel2 distribution
# Nothing to be done here, of this is not the case
FIND_PACKAGE( OpenBabel2 )
IF ( OPENBABEL2_FOUND )
	SET (EXECUTABLENAME eminim2)

	SET (${EXECUTABLENAME}_SRCS 
		eminim2
		GParser
	    intcoord
	)
	
	SET ( OTHERFILESOB
		COPYING
		eminim2.cfg
		Makefile
		README
	)
	
	INCLUDE_DIRECTORIES (
		${OPENBABEL2_INCLUDE_DIR}
	)
	
	LINK_DIRECTORIES (
	  	${OPENBABEL2_LIBRARY_DIRS}
	)

	ADD_EXECUTABLE(${EXECUTABLENAME}
		${${EXECUTABLENAME}_SRCS}
	)
		
	TARGET_LINK_LIBRARIES( ${EXECUTABLENAME}
		${PROJECT_NAME}
		${Boost_LIBRARIES}
	    ${OPENBABEL2_LIBRARIES}
    )
    
    INSTALL ( TARGETS ${EXECUTABLENAME} DESTINATION associated/ExternalOpenBabel
		PERMISSIONS
		OWNER_READ OWNER_WRITE OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE
		WORLD_READ WORLD_EXECUTE
	)
	
	INSTALL ( FILES ${OTHERFILESOB} DESTINATION associated/ExternalOpenBabel
		PERMISSIONS
		OWNER_READ OWNER_WRITE
		GROUP_READ
		WORLD_READ
	)
ENDIF()


