CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET (EXECUTABLENAME GIndividualCreator)

SET (${EXECUTABLENAME}_SRCS 
	GIndividualCreator
	GCommandLineParser
)

SET (TEMPLATEFILES
	template.cpp
	template.hpp
)

ADD_EXECUTABLE(${EXECUTABLENAME}
	${${EXECUTABLENAME}_SRCS}
)

TARGET_LINK_LIBRARIES (${EXECUTABLENAME}
	${PROJECT_NAME}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS ${EXECUTABLENAME} DESTINATION associated/
	PERMISSIONS
	OWNER_READ OWNER_WRITE OWNER_EXECUTE
	GROUP_READ GROUP_EXECUTE
	WORLD_READ WORLD_EXECUTE
)

INSTALL ( TARGETS ${TEMPLATEFILES} DESTINATION associated/templateFiles
	PERMISSIONS
	OWNER_READ OWNER_WRITE OWNER_EXECUTE
	GROUP_READ
	WORLD_READ
)
