CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_SUBDIRECTORY (
        evaluator
)

SET (EXECUTABLENAME GExternalProgram)

SET (${EXECUTABLENAME}_SRCS 
	GExternalProgram
	GCommandLineParser
)

ADD_EXECUTABLE(${EXECUTABLENAME}
	${${EXECUTABLENAME}_SRCS}
)

INCLUDE_DIRECTORIES (AFTER
	${PROJECT_SOURCE_DIR}/examples/SampleIndividuals
)

TARGET_LINK_LIBRARIES (${EXECUTABLENAME}
	${PROJECT_NAME}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS ${EXECUTABLENAME} DESTINATION associated/${EXECUTABLENAME}
	PERMISSIONS
	OWNER_READ OWNER_WRITE OWNER_EXECUTE
	GROUP_READ GROUP_EXECUTE
	WORLD_READ WORLD_EXECUTE
)



