CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET (EXECUTABLENAME GMultiPopulation)

SET (${EXECUTABLENAME}_SRCS 
	GMultiPopulation
	GArgumentParser
)

SET (CONFIGURATIONFILES
    GMultiPopulation.cfg
)

ADD_EXECUTABLE(${EXECUTABLENAME}
	${${EXECUTABLENAME}_SRCS}
)

INCLUDE_DIRECTORIES (AFTER
	${PROJECT_SOURCE_DIR}/examples/SampleIndividuals
)

TARGET_LINK_LIBRARIES (${EXECUTABLENAME}
#	${DATAEXCHANGELIBNAME}
	${HAPLIBNAME}
	${COMMUNICATIONLIBNAME}
	${OPTIMIZATIONLIBNAME}
	${COMMONLIBNAME}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS ${EXECUTABLENAME} DESTINATION tests/PerformanceChecks/${EXECUTABLENAME}
	PERMISSIONS
	OWNER_READ OWNER_WRITE OWNER_EXECUTE
	GROUP_READ GROUP_EXECUTE
	WORLD_READ WORLD_EXECUTE
)

INSTALL ( FILES ${CONFIGURATIONFILES} DESTINATION tests/PerformanceChecks/${EXECUTABLENAME}
	PERMISSIONS
	OWNER_READ OWNER_WRITE
	GROUP_READ
	WORLD_READ
)
