CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET (EXECUTABLENAME gsimplebasepopulation)

SET (${EXECUTABLENAME}_SRCS 
	gsimplebasepopulation
)

ADD_EXECUTABLE(${EXECUTABLENAME}
	${${EXECUTABLENAME}_SRCS}
)

TARGET_LINK_LIBRARIES (${EXECUTABLENAME}
	${PROJECT_NAME}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS ${EXECUTABLENAME} DESTINATION examples
	PERMISSIONS
	OWNER_READ OWNER_WRITE OWNER_EXECUTE
	GROUP_READ GROUP_EXECUTE
	WORLD_READ WORLD_EXECUTE
)
